<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">ksrIjYDdes638QylApGYcrWTyn1bGp3ra4ED8N41</string>
    <string name="parse_client_key">hjMXCVvA4j20ct80jGVnmDhRygEzTGwEGwk9jfhY</string>

    <string name="facebook_app_id">953838948011730</string>

    <string name="app_name">HangApp</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="email_hint">Email</string>
    <string name="full_name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="password_string">Password</string>
    <string name="sign_up_string_text">Don\'t have an account? Go back and make one.</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="create_account_string">Create an account</string>
    <string name="title_activity_authenticated">AuthenticatedActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout_string">Logout</string>
    <string name="drawer_menu_profile_string">Profile</string>
    <string name="drawer_menu_messages_string">Messages</string>
    <string name="drawer_menu_account_string">Account</string>
    <string name="drawer_menu_settings_string">Settings</string>

    <string name="drawer_menu_match_string">Find a match</string>
    <string name="name_placeholder_string">Name Placeholder</string>
    <string name="email_plceholder_string">email@placeholder.com</string>
    <string name="area_edit_hint">Enter area</string>
    <string name="check_area_around_string">Check for bars or restaurants around your area</string>
    <string name="or_string">or</string>
    <string name="test_string_attendance_card">13 people going today</string>

    <string-array name="left_spinner_data">
        <item>Bars</item>
        <item>People</item>
    </string-array>
    <string-array name="right_spinner_data">
        <item>1km</item>
        <item>5km</item>
        <item>10km</item>
        <item>20km</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_string_profile">PROFILE</string>
    <string name="profile_test_name_string">Harry Detsis</string>
    <string name="profile_string_checkins">Check-ins</string>
    <string name="profile_string_matches">Matches</string>
    <string name="previous_venue_placeholder_string">Previous Venue Placeholder</string>
    <string name="previous_venue_with_placeholder_string">with Harry Detsis</string>
    <string name="text_transit">text transit</string>
    <string name="image_transit">image transit</string>
    <string name="title_activity_venue">VenueActivity</string>
    <string name="rating_bar_transit">rating_bar_transit</string>
    <string name="recent_checkins_string">Recent Checkins:</string>
    <string name="tips_comments_card"><![CDATA[Tips & Comments:]]></string>
    <string name="user_profile_picture_accessibility">User profile picture</string>
    <string name="venue_activity_similar_places_string">Similar places</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
</resources>
