<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_match" android:icon="@drawable/ic_local_bar_white_24dp"
            android:title="@string/drawer_menu_match_string" />
        <item android:id="@+id/nav_profile" android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/drawer_menu_profile_string" />
        <item android:id="@+id/nav_messages" android:icon="@drawable/ic_chat_bubble_white_24dp"
            android:title="@string/drawer_menu_messages_string" />
        <item android:id="@+id/nav_account" android:icon="@drawable/ic_cloud_upload_white_24dp"
            android:title="@string/drawer_menu_account_string" />
        <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/drawer_menu_settings_string" />
    </group>

</menu>