<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".LoginActivity"
                android:background="@mipmap/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/logo_image"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.4"
            android:src="@mipmap/logo"
            android:paddingTop="20dp"/>
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/fields_layout"
                android:orientation="vertical">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:id="@+id/user_email_login"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    android:textColorHint="@color/coolGreyLight"
                    android:drawableRight="@drawable/ic_person_black_24dp"
                    android:textColor="@color/coolGrey"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:id="@+id/user_password_login"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:drawableRight="@drawable/ic_lock_black_24dp"
                    android:textColorHint="@color/coolGreyLight"
                    android:textColor="@color/coolGrey"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/login_button_faded_in"
                    android:background="@drawable/login_button_background"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/sign_up_button"
                    android:background="@drawable/signup_button_background"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or_string"
                    android:gravity="center_horizontal"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/facebook_login_button"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/fb_button_background"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgot_password_button"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/forgot_password_text"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/white" />



            </LinearLayout>
        </FrameLayout>

    </LinearLayout>


</RelativeLayout>
