<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.harrykristi.hangapp.ProfileFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:background="@drawable/venue_card_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/profile_string_profile"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_picture"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/example_profile"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="0dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/profile_test_name_string"
                android:textColor="@color/pink"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@+id/splitter">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@id/splitter"
                            android:gravity="center_horizontal"
                            android:text="@string/profile_string_checkins"
                            android:textColor="@color/pink"
                            android:textSize="18sp" />

                        <View
                            android:id="@id/splitter"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_centerVertical="true" />

                        <TextView
                            android:id="@+id/total_checkins"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/splitter"
                            android:gravity="center_horizontal"
                            android:text="38"
                            android:textColor="@color/pink"
                            android:textSize="16sp"/>
                    </RelativeLayout>
                    <View android:id="@id/splitter"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:background="@color/pink"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/splitter">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@id/splitter"
                            android:gravity="center_horizontal"
                            android:text="@string/profile_string_matches"
                            android:textColor="@color/pink"
                            android:textSize="18sp" />

                        <View
                            android:id="@id/splitter"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_centerVertical="true" />

                        <TextView
                            android:id="@+id/total_matches"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/splitter"
                            android:gravity="center_horizontal"
                            android:text="12"
                            android:textColor="@color/pink"
                            android:textSize="16sp"/>
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/pink"/>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_progress_spinner"
                style="?android:attr/progressBarStyleLarge"
                android:visibility="visible"
                android:layout_gravity="center"
                />

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/previous_check_ins_list"
                android:visibility="invisible">

            </ListView>
        </FrameLayout>

    </LinearLayout>

</FrameLayout>
